# SKS_GUI

./: CMakeLists.txt
apps/: main.cpp
include/SKS_GUI/: serialKeyboardServer.h  serialPannel.h  virtualKey.h
src/: PannelCom_Serial.cpp  SKS_GUI_Refactor.cpp  console.cpp  serialKeyboardServer.cpp  serialPannel.cpp  vKey.cpp  virtualKey.cpp
ui/: SKS_GUI_Refactor.ui  serialKeyboardServer.qrc  serialKeyboardServer.ui
